--- a/translations/messages.en.po
+++ b/translations/messages.en.po
@@ -28435,3 +28435,6 @@ msgstr "JSON configuration for Push notifications integration. Example: {'gotify
 
 msgid "Access denied"
 msgstr "Access denied"
+
+msgid "Please remember that modifications to the terms related to GDPR require you to report those modifications to third parties to whom you have provided personal information about your users, as stated in Article 19 of GDPR."
+msgstr "Please remember that modifications to the terms related to GDPR require you to report those modifications to third parties to whom you have provided personal information about your users, as stated in Article 19 of GDPR."
