--- a/translations/messages.pot
+++ b/translations/messages.pot
@@ -28407,6 +28407,15 @@ msgstr ""
 msgid "Please remember that modifications to the terms related to GDPR require you to report those modifications to third parties to whom you have provided personal information about your users, as stated in Article 19 of GDPR."
 msgstr ""
 
+msgid "Please select at least one item."
+msgstr ""
+
+msgid "Select items to export:"
+msgstr ""
+
+msgid "No exportable items found."
+msgstr ""
+
 msgid "Invalid format"
 msgstr ""
 
