--- a/translations/messages.en.po
+++ b/translations/messages.en.po
@@ -28438,3 +28438,12 @@ msgstr "Access denied"
 
 msgid "Please remember that modifications to the terms related to GDPR require you to report those modifications to third parties to whom you have provided personal information about your users, as stated in Article 19 of GDPR."
 msgstr "Please remember that modifications to the terms related to GDPR require you to report those modifications to third parties to whom you have provided personal information about your users, as stated in Article 19 of GDPR."
+
+msgid "Please select at least one item."
+msgstr "Please select at least one item."
+
+msgid "Select items to export:"
+msgstr "Select items to export:"
+
+msgid "No exportable items found."
+msgstr "No exportable items found."
