--- a/assets/locales/ro_RO.json
+++ b/assets/locales/ro_RO.json
@@ -525,7 +525,6 @@
     "Cannot find your language in the list? Contact us at info@chamilo.org to contribute as a translator.": "Este vreo limb\u0103 care nu exista \u00een list\u0103? Acceptam contribu\u021biile noi traduceri! Contact info@chamilo.org",
     "Please read the following requirements thoroughly.": "Citeste in intregime",
     "Recommended settings for your server configuration. These settings are set in the php.ini configuration file on your server.": "Setarile recomandate pentru configuratia sistemului dumneavoastra. Aceste setari sunt fixate in fisierul de configuratie php.ini din serverul dumneavoastra.",
-    "Some directories and the files they include must be writable by the web server in order for Chamilo to run (user uploaded files, homepage html files, ...). This might imply a manual change on your server (outside of this interface)": "Some directories and the files they include must be writable by the web server in order for Chamilo to run (user uploaded files, homepage html files, ...). This might imply a manual change on your server (outside of this interface)",
     "Chamilo is free software distributed under the GNU General Public licence (GPL).": "Chamilo este un program gratis distribuit sub licenta Generala Publica GNU (GPL)",
     "The install script will create (or use) the Chamilo database using the database name given here. Please make sure the user you give has the right to create the database by the name given here. If a database with this name exists, it will be overwritten. Please do not use the root user as the Chamilo database user. This can lead to serious security issues.": "Scriptul instala va crea baza/bazele de date Chamilo. Va rugam sa tineti cont ca Chamilo va trebui sa creeze mai multe baze de date. Daca va este permis sa folositi o singura baza de date de Serviciul de Gaduire, Chamilo nu va functiona, doar daca alegeti optiunea \"O singura baza de date\".",
     "The install script will erase all tables of the selected database. We heavily recommend you do a full backup of them before confirming this last install step.": "Instalatia va anula tabelele din banca de date selectate. E foarte important ca prima data sa faceti un backup a tabelelor/bancii de date inainte de a definitiva ultimul pas.",
@@ -589,5 +588,6 @@
     "Test email sent successfully": "Test email sent successfully",
     "Test email failed: ": "Test email failed: ",
     "Error during test email: ": "Error during test email: ",
-    "Destination of test e-mail": "Destination of test e-mail"
+    "Destination of test e-mail": "Destination of test e-mail",
+    "Some directories and the files they include must be writable by the web server in order for Chamilo to run (user uploaded files, homepage html files, ...). This might imply a manual change on your server (outside of this interface).": "Unele foldere si fisierele pe care le includ trebuieb sa fie inscriptibile pentru serverul de web pentru ca platforma sa functioneze(fisiere uploadate de studenti, fisiere html pagina de inceput). Aceasta poate implica o schimbare manuala pe serverul dvs(in afara acestei interfete)."
 }
