--- a/assets/locales/fr_FR.json
+++ b/assets/locales/fr_FR.json
@@ -7,7 +7,7 @@
     "Start recording": "Lancer l'enregistrement",
     "Stop recording": "Arr\u00eater l'enregistrement",
     "Home": "Accueil",
-    "Title": "nom",
+    "Title": "Titre",
     "Content": "Contenu",
     "Invitees": "Invit\u00e9s",
     "Are you sure you want to delete this item?": "Are you sure you want to delete this item?",
